# simple-db

./: .gitignore  CMakeLists.txt  README.md
include/simpledb/: buffer_pool_manager.h  disk_manager.h  page.h  pager.h  record.h  status.h
src/: buffer_pool_manager.cpp  disk_manager.cpp  main.cpp  page.cpp  pager.cpp  record.cpp
tests/: buffer_pool_manager_test.cpp  pager_test.cpp
